--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
-<h1>Welcome to Shweta's Website!</h1>
+<h1>Hi mumma!!! I love you!</h1>
 <!-- Add an image of yourself that links to the about page -->
-<a href="./public/about.html"><img src="./assets/images/cat.png"/></a>
+<a href="./public/about.html"><img src="./assets/images/baby1.png"/></a>
 <hr />
 <!-- Add a link to your contact me page here -->
 <a href="./public/contact.html">Contact me</a>
