--- a/public/contact.html
+++ b/public/contact.html
@@ -1,9 +1,7 @@
-<h1>Contact Me</h1>
+tor <h1>Contact Me</h1>
 <p>Tel: +123456789</p>
-<p>Email: me@gmail.com</p>
+<p>Email: cutebaby@gmail.com</p>
 <p>Address:</p>
 <p>
-  123 North Street<br />
-  Some City<br />
-  Some Country <br />
+  Gurugram<br />
 </p>
