--- a/public/about.html
+++ b/public/about.html
@@ -1,2 +1,2 @@
 <h1>About Me</h1>
-<p>My name is BABYY. My mumma name is Shweta and my handsome papa's name is Lokesh. They both are very sweet and I love them! I can not wait to be the part of their family.</p>
+<p>My name is BABY. My mumma name is Shweta and my handsome papa's name is Lokesh. They both are very sweet and I love them! I can not wait to be the part of their family.</p>
